--- a/EmployeeLeaveTracker/src/main/webapp/style.css
+++ b/EmployeeLeaveTracker/src/main/webapp/style.css
@@ -186,7 +186,16 @@ th {
   text-align: center;
   padding: 10px 20px;
 }
+.output { 
+    border-collapse: collapse; 
+}
 
+tr{
+  box-sizing: border-box;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #000;
+}
 
 
 nav{
